# misc-experiments

./: .gitmodules
cpp_emscripten/: CMakeLists.txt  README.md  post-build.sh
cpp_emscripten/scripts/: run.sh
cpp_emscripten/src/: App.cpp  App.h  AppState.h  main.cpp
cpp_emscripten/static/: index.html
cpp_emscripten/static/shaders/: shader.fragment  shader.vertex
csharp_fuse/c-lib/: .clang-format  CMakeLists.txt
csharp_fuse/c-lib/src/: Logger.cpp  Logger.h  lib.cpp  lib.h
robowar/rust/: Cargo.toml
robowar/rust/app_sdl3/: Cargo.toml
robowar/rust/lib/: Cargo.toml
robowar/rust/src/: assembler.rs  ecs.rs  emulator.rs  main.rs  parser.rs  window.rs
rust-axum-diesel-leptos/client/: Cargo.toml
rust-axum-diesel-leptos/client/src/: main.rs
rust-axum-diesel-leptos/server/: .env  Cargo.toml  db.sqlite  diesel.toml
rust-axum-diesel-leptos/server/src/: main.rs
rust-axum-handlebars-htmx/: Cargo.toml
rust-axum-handlebars-htmx/src/: errors.rs  main.rs  templates.rs
rust-axum-handlebars-htmx/templates/: click-response.html  counter.html  page.html
rust-axum-htmx/: Cargo.toml  README.md
rust-axum-htmx-sqlx-postgres/: Cargo.toml  README.md
rust-axum-htmx-sqlx-postgres/.sqlx/: query-5cf49adf35248386fcabb73ce0ee0d59ba7decf11818119ade91808b5287e7d1.json  query-a771f670cff68b0f5b51f76ecb49827adb5aa383d31e8241d6b54fe479bfbacf.json
rust-axum-htmx-sqlx-postgres/migrations/: 20241229184835_messages.sql
rust-axum-htmx-sqlx-postgres/src/: concurrent_hashmap.rs  errors.rs  main.rs  websockets.rs
rust-axum-htmx-sqlx-postgres/src/db/: messages.rs  mod.rs  notifications.rs
rust-axum-htmx-sqlx-postgres/src/templates/: mod.rs  views.rs
rust-axum-htmx-sqlx-postgres/templates/: messages.html  new-message.html
rust-axum-htmx/src/: cache.rs  concurrent_hashmap.rs  main.rs  templates.rs  websockets.rs
rust-axum-htmx/templates/: counter.html  index.html  messages.html  new-message.html
rust-axum-leptos/client/: Cargo.toml  index.css  index.html
rust-axum-leptos/client/src/: main.rs  requests.rs  websockets.rs
rust-axum-leptos/server/: Cargo.toml  sqlite.db
rust-axum-leptos/server/migrations/: 01-users.sql
rust-axum-leptos/server/src/: db.rs  main.rs  websockets.rs
rust-axum-maud-htmx/: Cargo.toml
rust-axum-maud-htmx/assets/: index.css
rust-axum-maud-htmx/src/: main.rs
rust-kafka/client/: Cargo.toml
rust-kafka/client/src/: api.rs  main.rs  websockets.rs
rust-kafka/server/: Cargo.toml  config.json
rust-kafka/server/src/: kafka.rs  main.rs  websockets.rs
rust-llm/: Cargo.toml  README.md
rust-llm/src/: db.rs  env.rs  llm.rs  main.rs  pdf.rs  process.rs  prompt.rs
rust-pixels-winit/: Cargo.toml
rust-pixels-winit/src/: main.rs
rust-poem-leptos-websockets/client/: Cargo.toml  index.html  tailwind.config.js  watch.sh
rust-poem-leptos-websockets/client/src/: constants.rs  main.rs  storage.rs  websockets.rs
rust-poem-leptos-websockets/server/: .env  Cargo.toml  diesel.toml  docker-compose.yml
rust-poem-leptos-websockets/server/src/: auth.rs  main.rs  users.rs  websockets.rs
rust-poem-leptos/client/: Cargo.toml
rust-poem-leptos/client/src/: main.rs  websockets.rs
rust-poem-leptos/server/: Cargo.toml
rust-poem-leptos/server/src/: main.rs  websockets.rs
rust-poem-leptos/shared/: Cargo.toml
rust-poem-leptos/shared/src/: lib.rs  models.rs  websockets.rs
rust-sdl3/: Cargo.toml
rust-sdl3-opengl/: Cargo.toml
rust-sdl3-opengl/demo-cube/: Cargo.toml
rust-sdl3-opengl/demo-cube/assets/: README.md
rust-sdl3-opengl/demo-cube/src/: main.rs
rust-sdl3-opengl/lib/: Cargo.toml
rust-sdl3-opengl/lib/src/: font.rs  lib.rs  mesh.rs  rect.rs  sdl_utils.rs
rust-sdl3-opengl/src/: camera.rs  main.rs  sdl_utils.rs
rust-sdl3-opengl/src/gl_utils/: buffer.rs  mod.rs  shader.rs  vertex_array_object.rs
rust-sdl3-opengl/src/shaders/: shader.frag  shader.vert
rust-sdl3/src/: main.rs
rust-softbuffer-winit/: Cargo.toml  README.md  index.css  index.html
rust-softbuffer-winit/src/: main.rs
rust-sqlx-postgres/: Cargo.toml  README.md  docker-compose.yml  local.env
rust-sqlx-postgres/migrations/: 20241228122131_notifications.sql
rust-sqlx-postgres/src/: main.rs
rust-sudoku/: Cargo.toml  README.md
rust-sudoku/lib/: Cargo.toml
rust-sudoku/lib/src/: errors.rs  gamestate.rs  generate.rs  lib.rs  types.rs
rust-sudoku/src/: dom.rs  errors.rs  history.rs  main.rs
rust-sudoku/src/graphics/: mod.rs  text.rs  types.rs  uistate.rs
rust-sudoku/src/sudoku/: gamestate.rs  generate.rs  mod.rs  types.rs
rust-sudoku/web-client/: Cargo.toml  index.html
rust-sudoku/web-client/assets/: README.md
rust-sudoku/web-client/src/: dom.rs  fetch.rs  main.rs
rust-vulkano-winit/: Cargo.toml
rust-vulkano-winit/src/: main.rs  shader.frag  shaders.rs
rust-webgl/: .gitignore  Cargo.toml  Makefile  README.md  index.html  watch.sh
rust-webgl-2/: Cargo.toml
rust-webgl-2/src/: dom.rs  error.rs  events.rs  geom.rs  main.rs
rust-webgl-2/src/graphics/: array_buffer.rs  element_array_buffer.rs  shader.rs
rust-webgl-2/src/math/: camera.rs
rust-webgl-2/src/shaders/: shader.vertex.glsl
rust-webgl/app/: Cargo.toml
rust-webgl/app/src/: main.rs
rust-webgl/client/: Cargo.toml
rust-webgl/client/src/: draw_mode.rs  main.rs  mesh.rs  render_phase.rs
rust-webgl/demo-cube/src/: main.rs
rust-webgl/lib/: Cargo.toml
rust-webgl/lib/src/: errors.rs  events.rs  lib.rs  uistate.rs
rust-webgl/src/: app.rs  errors.rs  events.rs  main.rs  runner.rs  shader.frag  shader.vert  shaders.rs  uistate.rs
rust-webgl/src/demo/: mod.rs
rust-webgl/src/extra_math/: look_at_camera.rs  mod.rs  plane.rs  primitives.rs
rust-webgl/src/geometry/: camera.rs  mod.rs
rust-webgl/src/graphics/: array_buffer.rs  (+3 more)
rust_web/: Cargo.toml  index.html
rust_web/assets/: test.txt
rust_web/src/: main.rs
rust_webgl/: Cargo.toml  README.md
rust_webgl/assets/: shader.frag  shader.vert
rust_webgl/client/: Cargo.toml  Trunk.toml  index.html
rust_webgl/lib/: Cargo.toml
rust_webgl/src/: app_states.rs  fetch_utils.rs  futures_app_state.rs  main.rs  shader.rs  shaders.rs
(+1591 files in other folders)
