[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["tracing"] }
handlebars = "5.1.2"
include_dir = "0.7.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.8.0", features = ["v4"] }
