[package]
name = "rust-axum-maud-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
include_dir = "0.7.3"
maud = { version = "0.25.0", features = ["axum"] }
mime_guess = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
