[package]
name = "rust-pixels-winit"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.31"
pixels = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgpu = "25.0.0"
winit = "0.30.9"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
