[package]
name = "rust-sdl3"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
sdl3 = { version = "0.16.1", features = ["build-from-source", "ttf", "image"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
