[package]
name = "rust-pixels-winit"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
color-eyre = "0.6.3"
futures = "0.3.31"
softbuffer = "0.4.6"
tiny-skia = "0.11.4"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winit = "0.30.9"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
