[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.2.15", features = ["js"] }
log = "0.4.22"
rand = "0.8.5"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "Document", "Window", "CssStyleDeclaration", "CanvasRenderingContext2d", "TextMetrics", "MouseEvent", "KeyboardEvent"] }
