[package]
name = "rust-vulkano-winit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30.12"
