[package]
name = "rust-vulkano-winit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
glam = { version = "0.31.0", features = ["bytemuck"] }
shaderc = "0.10.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vulkano = "0.35.2"
winit = "0.30.12"
