[package]
name = "rust-webgl-2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.125"
web-sys = { version = "0.3.70", features = ["Window", "Document", "HtmlCanvasElement", "CssStyleDeclaration", "WebGl2RenderingContext"] }
