[package]
name = "rust-webgl-2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.17.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.22"
nalgebra = { version = "0.33.0", features = ["bytemuck", "convert-bytemuck"] }
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["rt", "sync"] }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["Window", "Document", "HtmlCanvasElement", "CssStyleDeclaration", "WebGl2RenderingContext", "MouseEvent", "KeyboardEvent", "WebGlShader", "WebGlActiveInfo", "WebGlUniformLocation", "WebGlProgram", "WebGlBuffer"] }
