[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-console = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"CssStyleDeclaration",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"CanvasGradient",
]