[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.6"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"CssStyleDeclaration",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"CanvasGradient",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
]

[dependencies.async-std]
version = "1.12.0"
features = [
	"attributes",
]