[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.34"
rand = "0.8.5"
futures = "0.3.26"

[dependencies.getrandom]
version = "0.2.8"
features = [
	"js",
]

[dependencies.web-sys]
version = "0.3.61"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"CssStyleDeclaration",
	"HtmlCanvasElement",
	"WebGl2RenderingContext",
	"WebGlContextAttributes",
	"WebGlPowerPreference",
	"WebGlShader",
	"WebGlProgram",
	"WebGlVertexArrayObject",
	"WebGlBuffer",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
]

[dependencies.async-std]
version = "1.12.0"
features = [
	"attributes",
]