[package]
name = "robowar"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "0.10.1", features = ["regex"] }
color-eyre = "0.6.5"
num = "0.4.3"
rand = "0.9.1"
softbuffer = "0.4.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winit = "0.30.11"
