[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-wasm = "0.11.16"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"

