[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
console_log = "1.0.0"
wasm-bindgen = "0.2.90"
js-sys = "0.3.67"
web-sys = { version = "0.3.67", features = ["RequestInit", "Request", "Response", "Headers", "RequestMode", "Window"] }
wasm-bindgen-futures = "0.4.40"
serde_json = "1.0.113"
