[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7.4", features = ["ws"] }
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tower = { version = "0.4.13", features = ["util"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = "0.3.30"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
serde_json = "1.0.113"
