[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
include_dir = { version = "0.7.4", features = ["glob"] }
chrono = "0.4.38"
