[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.93"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.31"
gloo = "0.11.0"
leptos = { version = "0.6.15", features = ["nightly", "csr"] }
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
web-sys = { version = "0.3.72", features = ["WebSocket"] }
uuid = { version = "1.11.0", features = ["v7", "js"] }
