[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.93"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.7", features = ["ws"] }
tower-http = { version = "0.6.1", features = ["trace"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
futures = "0.3.31"
clap = { version = "4.5.21", features = ["derive"] }
