[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.30"
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
log = "0.4.22"
pharos = "0.5.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
ws_stream_wasm = "0.7.4"
