[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.30"
leptos = { version = "0.6.13", features = ["csr"] }
log = "0.4.22"
pharos = "0.5.3"
serde = "1.0.204"
serde_json = "1.0.122"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
ws_stream_wasm = "0.7.4"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = "0.12.5"
