[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.86"
futures-util = "0.3.30"
poem = { version = "3.0.4", features = ["websocket"] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
dotenvy = "0.15.7"
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
