[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.105"
shared = { path = "../shared", features = ["client"] }
tokio = { version = "1.32.0", features = ["rt"] }
wasm-bindgen = "0.2.87"
