[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
log = "0.4.20"
console_log = "1.0.0"
reqwest = { version = "0.11.24", features = ["json"] }
