[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3.58", features = ["websocket"] }
serde = "1.0.188"
serde_json = "1.0.105"
shared = { path = "../shared", features = ["server"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
