[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
poem = { version = "1.3.58", features = ["websocket"], optional = true }
log = { version = "0.4.20", optional = true }
tracing = { version = "0.1.37", optional = true }
tokio = "1.32.0"
futures-util = "0.3.28"
tokio-stream = "0.1.14"
web-sys = { version = "0.3.64", features = ["WebSocket", "Blob"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[features]
server = ["dep:poem", "dep:tracing"]
client = ["dep:log", "dep:web-sys", "dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures"]
